--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>Ejemplos de codigo que me voy encontrando</h2>
 
         <section id="downloads">
-          <a href="https://github.com/davidperezmillan/examples/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/davidperezmillan/examples/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/davidperezmillan/examples" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/davidperezmillan/examples/zipball/master" class="btn">Descargar .zip</a>
+          <a href="https://github.com/davidperezmillan/examples/tarball/master" class="btn">Descargar .tar.gz</a>
+          <a href="https://github.com/davidperezmillan/examples" class="btn btn-github"><span class="icon"></span>Ver en GitHub</a>
         </section>
       </div>
     </header>
