--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p class="header">Ejemplos de codigo que me voy encontrando</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/davidperezmillan/examples/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/davidperezmillan/examples/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/davidperezmillan/examples">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/davidperezmillan/examples/zipball/master">DESCARGA ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/davidperezmillan/examples/tarball/master">DESCARGA TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/davidperezmillan/examples">VER GITHUB</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/davidperezmillan">davidperezmillan</a></p>
